--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "discordbot",
   "version": "1.0.0",
-  "engines":{
-    "node":"10.15.0"
+  "engines": {
+    "node": "10.15.0"
   },
   "description": "Tenis Bot",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "get-youtube-id": "^1.0.0",
     "opusscript": "0.0.6",
     "request": "^2.88.0",
+    "superagent": "^4.1.0",
     "youtube-info": "^1.3.2",
     "ytdl-core": "^0.28.3"
   }
